# PlantIQ

./: .dockerignore  .env.development  .env.example  .gitignore  INTEGRATED_ARCHITECTURE.md  Makefile  PROJECT_STATUS.md  RAG_Chatbot_Architecture.md  README.md  docker-compose.yml  docling_convert_with_qwen.py  logs.txt  pyproject.toml  pytest.ini  rag_hitl_pipeline.py  rag_qa_gates.py  rag_section_review.py  rag_table_figure_handler.py  rag_text_reformatter.py  rag_validation_enhanced.py  rag_vlm_comparison.py  rag_vlm_image_describer.py  sonar-project.properties  text.txt  verify_hitl_setup.py  vlm_config_project.yaml  vlm_options.py
.github/: copilot-instructions.md
.sonarlint/: connectedMode.json
Documents/: Alpha_Checkpoint_Report.md  Appendix 2a – Capstone Consent Agreement - Discovery  Appendix 4 – Capstone Proposal Template.md  Capstone_Proposal_UPDATED.md  (+3 more)
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  chat.py  pipeline.py  websocket.py
backend/app/api/pipeline/: _chunks.py  _qa.py  _review.py  _routes_decisions.py  _routes_list.py  _routes_upload.py  routes.py
backend/app/core/: config.py  jwt.py  ldap.py  optimization_log.py  security.py  websocket.py
backend/app/models/: auth.py  chat.py  database.py  pipeline.py
backend/app/services/: auth_service.py  chat_service.py  conversation_service.py  embedding_service.py  llm_service.py  pipeline_artifact_service.py  pipeline_service.py  qdrant_service.py  rag_helpers.py  vllm_service.py
backend/tests/: test_auth.py  test_hybrid_integration.py  test_llm_service.py  test_performance_benchmarks.py  test_postgrest.py  test_postgrest_endpoints.sh
backend/tests/evidence/: concurrency_capacity_evidence.md  runtime_stability_evidence.md
pipeline/: pyproject.toml  requirements.txt
pipeline/src/cli/: hitl_pipeline.py  rag_markdown_reformatter_prompt.md  text_reformatter.py
pipeline/src/ingestion/: docling_converter.py
pipeline/src/lineage/: lineage_tracker.py
pipeline/src/review/: section_review.py
pipeline/src/utils/: table_figure_handler.py  vlm_options.py  vlm_response_parser.py
pipeline/src/validation/: vlm_comparison.py  vlm_image_describer.py
pipeline/tests/: validate_imports.py
(+366 files in other folders)
