[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plantiq"
version = "0.1.0"
description = "Air-Gapped RAG System for Industrial OT Environments"
authors = [{name = "PlantIQ Team"}]
readme = "README.md"
requires-python = ">=3.10"
# No packages - this is a workspace/meta-package

[tool.setuptools.packages.find]
# Don't auto-discover packages - this is a monorepo workspace
include = []

[tool.uv]
# Use uv for dependency management
managed = true
