[project]
name = "plantiq-backend"
version = "0.1.0"
description = "PlantIQ FastAPI Backend and RAG Service"
authors = [{name = "PlantIQ Team"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.2.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pyjwt[crypto]>=2.8.0",
    "cryptography>=41.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "ldap3>=2.9.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "secrets*", "scripts*"]
