[project]
name = "plantiq-pipeline"
version = "0.1.0"
description = "PlantIQ HITL Document Ingestion and Validation Pipeline"
authors = [{name = "PlantIQ Team"}]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "pillow>=10.0.0",
    "pdfplumber>=0.10.0",
    "docling>=1.0.0",
    "docling-core>=1.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
